--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Elius H Himel",
   "license": "ISC",
   "dependencies": {
     "svgo": "^3.3.2"
