--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "repository": {
-    "type": "git",
+    "type": "github",
     "url": "https://github.com/EliusHHimel/free-icons-svg"
   },
   "scripts": {
