--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "free-icons-svg",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -9,14 +9,17 @@
     "url": "https://github.com/EliusHHimel/free-icons-svg"
   },
   "scripts": {
-    "build": "rollup -c",
+    "generate-exports": "node generate-icons.mjs",
+    "build": "pnpm run generate-exports && rollup -c",
     "test": "echo \"No tests defined\""
   },
   "keywords": [],
   "author": "Elius H Himel",
   "license": "ISC",
   "dependencies": {
-    "svgo": "^3.3.2"
+    "@rollup/plugin-typescript": "^12.1.2",
+    "svgo": "^3.3.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.1",
