fix: update build script to use npm instead of pnpm for consistency

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "generate-exports": "node generate-icons.mjs",
-    "build": "pnpm run generate-exports && rollup -c",
+    "build": "npm run generate-exports && rollup -c",
     "test": "echo \"No tests defined\""
   },
   "keywords": [],
