--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-url": "^8.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "rollup": "^4.28.1",
+    "semantic-release": "^24.2.0",
     "typescript": "^5.7.2"
   },
   "files": [
