--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "free-icons-svg",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "repository": {
     "type": "github",
