--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "free-icons-svg",
   "version": "1.3.0",
-  "description": "",
+  "description": "Free Colorful SVG Icons This package provides you a large number of unique colorful SVG icons",
   "main": "dist/index.js",
   "type": "module",
   "repository": {
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "generate-exports": "node generate-icons.mjs",
-    "build": "npm run generate-exports && rollup -c",
+    "build": "npm run generate-exports && rollup -c && svgo -f dist && tsc",
     "test": "echo \"No tests defined\""
   },
   "keywords": [],
